tests/NormalTests/paczka2/big_fuzzy/34748675.err
Error in line 5: z4CWOGV3I A344 89,6
Error in line 11: r7PnC4Eh A344 66,2
Error in line 27: r7PnC4Eh A344 39,2
Error in line 34: r7PnC4Eh S559 54,3
Error in line 36: z4CWOGV3I A344 89,2
Error in line 61: 2k5cYQ1BR4 S559 82,5
Error in line 62: 2k5cYQ1BR4 A303 16,6
Error in line 59: A303 A504 89,6
Error in line 64: A303 S559 18,5
Error in line 80: z4CWOGV3I A303 91,4
Error in line 92: KwFh0Oi S559 25,1
Error in line 93: KwFh0Oi A504 884,1
Error in line 106: z4CWOGV3I A504 59,7
Error in line 115: A303 S559 55,92
Error in line 117: r7PnC4Eh S559 7,0
Error in line 98: A303 S559 23,8
Error in line 123: z4CWOGV3I A344 98,5
Error in line 124: z4CWOGV3I A303 26,6
Error in line 129: z4CWOGV3I A504 11,2
Error in line 127: PCYc S559 40,7
Error in line 111: 2k5cYQ1BR4 A303 27,8
Error in line 144: 2k5cYQ1BR4 S559 80,2
Error in line 143: JbN A504 16,9
Error in line 159: JbN A303 -3,4
Error in line 158: JbN A303 44,1
Error in line 153: KwFh0Oi A504 45,5
Error in line 161: JbN A504 68,6
Error in line 180: 2k5cYQ1BR4 S559 24,4
Error in line 185: r7PnC4Eh A344 58,4
Error in line 224: PCYc A303 40,80
Error in line 223: z4CWOGV3I A303 11,0
